send/receive cards from server!

--- a/src/edinitsa.ui
+++ b/src/edinitsa.ui
@@ -47,13 +47,27 @@
      </widget>
     </item>
     <item>
-     <widget class="CanvasWidget" name="canvas" native="true">
+     <widget class="QWidget" name="table" native="true">
       <property name="minimumSize">
        <size>
         <width>0</width>
-        <height>200</height>
+        <height>50</height>
        </size>
       </property>
+      <layout class="QVBoxLayout" name="verticalLayout_3">
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>0</number>
+       </property>
+      </layout>
      </widget>
     </item>
     <item>
@@ -83,14 +97,6 @@
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>CanvasWidget</class>
-   <extends>QWidget</extends>
-   <header>widgets/canvaswidget.h</header>
-   <container>1</container>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections>
   <connection>
